Check in for organizer and response email and score to event participants list